# Merlin

./: .gitignore  README.md  pyproject.toml
merlin/: __init__.py
merlin/data/: __init__.py  dataloaders.py  download_data.py  monai_transforms.py  phenotypes.csv
merlin/inference/: demo.py  inference.py
merlin/models/: __init__.py  build.py  i3res.py  inflate.py  load.py
merlin/utils/: __init__.py  huggingface_download.py
