[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merlin"
version = "0.0.1"
authors = [
    { name = "Louis Blankemeier" }
]
description = "Merlin: A Vision Language Foundation Model for 3D Computed Tomography"
dependencies = [
    "numpy==1.26.4",
    "torch==2.1.2",
    "monai==1.3.0",
    "huggingface_hub",
    "transformers==4.38.2",
    "torchvision==0.16.2",
    "nibabel",
    "nltk",
]

[tool.setuptools.packages.find]
where = ["."]
